refractor(css): fixed margin spacing

--- a/css/forum.css
+++ b/css/forum.css
@@ -172,7 +172,7 @@ table.ipbtable th.forum {
 }
 
 .post-footer ul.posting-icons {
-	margin: 20px 0 10px 0;
+	margin: 20px 0;
 }
 
 
